refactor: replace shell-scripted mosquctl calls with direct mosquitto_ctrl dynsec commands in MosquittoBroker